[Fix].contact-areaのtext-alignを追加

--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -209,6 +209,7 @@ header {
 .contact-area {
   display: flex;
   flex-wrap: wrap;
+ text-align: center;
 }
 
 .contact-mail {
